@@ -3,6 +3,7 @@ from fabrix.editor import edit_file, edit_local_file, edit_ini_section, edit_tex
 from fabrix.editor import insert_line, delete_line, prepend_line, append_line, replace_line, substitute_line, strip_line
 from fabrix.ioutil import read_file, read_local_file, write_file, write_local_file, debug, copy_file, rsync, chown, chmod
 from fabrix.rpmyum import yum_install, yum_remove, yum_update
+from fabrix.reboot import is_reboot_required, reboot_and_wait
 from fabrix.render import render_template
 
 # flake8: noqa
